syntax = "proto3";

package inventory;

// Mensagem vazia usada em SearchAllProducts
message Empty {}

// Tipo de retorno para listar todos os produtos
message ProductResponse {
    int32 id = 1;
    string name = 2;
    int32 quantity = 3;
    float price = 4;
    string photo = 5;
    string author = 6;
}

message ProductsResponse {
    repeated ProductResponse products = 1;
}

// Nova mensagem de payload contendo só o ID
message Payload {
    int32 id = 1;
}

service InventoryService {
    // Método já existente
    rpc SearchAllProducts(Empty) returns (ProductsResponse) {}

    // NOVO: busca produto por ID
    rpc SearchProductByID(Payload) returns (ProductResponse) {}
}
